# Internship-Bot

./: .gitignore  README.md  job_ranker.py  main.py  matcher_demo.py  pyproject.toml  requirements.txt
examples/: sample_jobs.json
internship_bot/: __init__.py  aggregator.py  ranker.py  schemas.py
internship_bot/connectors/: base.py  indeed.py  linkedin.py  scraper.py  wellfound.py
resume_processor/: __init__.py  cli.py  config.py  schema.py
resume_processor/analysis/: optimizer.py
resume_processor/parsing/: __init__.py  base.py  docx_parser.py  extraction.py  factory.py  pdf_parser.py  text_parser.py
resume_processor/profile_optimizer/: __init__.py  artifacts.py  engine.py  reporting.py
resume_processor/profile_optimizer/evaluators/: base.py  rule_based.py
resume_processor/profile_sources/: __init__.py  linkedin.py  portfolio.py
src/internship_bot/: __init__.py  api.py  cli.py  config.py  models.py  monitoring.py  secrets_vault.py  sheets_backend.py
src/internship_bot/automation/: base.py  greenhouse.py  lever.py  workday.py
tests/: test_extraction.py  test_monitoring.py  test_profile_optimizer.py  test_profile_sources.py  test_schema_serialization.py  test_secrets_vault.py
tests/fixtures/: linkedin_export.json  portfolio.html  portfolio.md
