[project]
name = "internship-bot"
version = "0.1.0"
description = "Resume parsing utilities with configurable preferences"
authors = [{name = "Internship Bot"}]
requires-python = ">=3.10"
dependencies = [
  "pdfminer.six>=20221105",
  "python-docx>=0.8.11",
]
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
internship-bot = "resume_processor.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
